fixed alignment issues

--- a/frontend/views/homeView.less
+++ b/frontend/views/homeView.less
@@ -60,18 +60,16 @@
 
 	/* Section - intro */
 	&.intro {
-		padding: 0;
+		margin-left: -45px;
+		margin-right: -45px;
 
-		.embed-responsive {
-			padding-bottom: 53.25%;
-		}
 		.intro-video {
-			height: 100%;
+			padding-left: 0;
 		}
 		
 		.preorder {
-			padding-top: 15px;
-			background-color: @color-scenario;
+			// padding-top: 15px;
+			// background-color: @color-scenario;
 
 			@media (max-width: @screen-sm-er-max) {
 				padding-bottom: 15px;
